Added final jupyter notebook and Team Contract

--- a/Milestone 1/milestone_1.ipynb
+++ b/Milestone 1/milestone_1.ipynb
@@ -36,6 +36,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Downloading data from Figshare"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -103,6 +111,14 @@
     "data = json.loads(response.text)  # this contains all the articles data, feel free to check it out\n",
     "files = data[\"files\"]             # this is just the data about the files, which is what we want\n",
     "files"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downloading and unzipping files to local drive"
    ]
   },
   {
@@ -193,6 +209,14 @@
    ],
    "source": [
     "%ls -ltr figsharerainfall"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring data to make sure it was downloaded and stored correctly"
    ]
   },
   {
@@ -386,6 +410,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging files into a single Combined File"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -539,6 +571,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading Combined File into Memory and Performing a Simple EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -568,6 +608,14 @@
     "filtered_df = pd.read_csv('combined/combined_data.csv', usecols = cols)\n",
     "filtered_df[\"rain (mm/day)\"] = filtered_df[[\"rain (mm/day)\"]].astype(\"float32\")\n",
     "filtered_df.groupby(\"model\").mean().plot(kind=\"bar\");"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combined File Size in local drive"
    ]
   },
   {
@@ -684,10 +732,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test the data trasnsfer process using Arrow:"
+    "# Test the data trasnsfer process using Arrow"
    ]
   },
   {
@@ -764,18 +813,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusions and Comparison Table"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Team Member   | OS              | RAM                      | Processor                                       | Is SSD       | Time taken (Q4) | Time taken (Q5)       |\n",
+    "|---------------|-----------------|--------------------------|-------------------------------------------------|--------------|-----------------|-----------------------|\n",
+    "| Eric Tsai         | Windows 11 Home | 16 GB @ 3200 Mhz         | AMD Ryzen 7 4800HS                              | Yes (512 GB) | 6 min 9s        | 1 min 19s             |\n",
+    "| Zilong Yi       | macOS Ventura.  | 8GB                      | M1                                              | 128GB        | 3min 55s        |     23.2sec                  |\n",
+    "| Caesar Wong   | Windows 11      | 16.0 GB (15.6 GB usable) | 12th Gen Intel(R) Core(TM) i7-12650H   2.30 GHz | Yes          | 14min 51s       | 1min 8s After: 45.2 s |\n",
+    "| Daniel Merigo | macOS Ventura   | 8GB                      | M2                                              | Yes (256GB)  | 3min 12 sec     | 18.5 sec              |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "During the completion of this experiment we had the fortune of having a diverse selection of computer systems, including different OSs, processors, RAM and even different types of SSD (SATA and NVME) which provided very different results. During the coding process we did not encounter any problems besides an interestingly long combination time in Caesars case, we ruled out SSD as the problem (as Caesar is using an NVME drive) so the difference is only explained by RAM speed and processor.\n",
+    "\n",
+    "It is interesting to see Macs are much more efficient for these tasks, beating Windows by an order of magnitude. It is specially interesting when comparing to the Ryzen machine as Ryzen also benefits from fast memory interfaces due to Infinity Fabric, it could be the RAM speed that could be the issue.\n",
+    "\n",
+    "For question 6, we chose to use Arrow exchange to transfer the entire dataset from Python to R. We chose Arrow because using Pandas exchange takes a long time due to serialization and deserialization, making the task infeasible. We also decided against using Parquet because it will generate more files which also end up using more disk space.\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:525_2023]",
+   "display_name": "525_2023",
    "language": "python",
-   "name": "conda-env-525_2023-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
