added screenshots to notebook

--- a/Milestone 2/Milestone2.ipynb
+++ b/Milestone 2/Milestone2.ipynb
@@ -100,6 +100,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bef36ef0-3af6-4ee2-a553-6476cf3650d4",
+   "metadata": {},
+   "source": [
+    "## Screenshot\n",
+    "\n",
+    "![](img/setup_ec2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9801b911",
    "metadata": {},
    "source": [
@@ -134,6 +144,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0bf1fe1-b00e-4b95-9f25-61e8afbad69a",
+   "metadata": {},
+   "source": [
+    "## Screenshot\n",
+    "\n",
+    "![](img/setup_aws_and_data_folder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "539ad5a3",
    "metadata": {},
    "source": [
@@ -161,6 +181,16 @@
     "\n",
     "<br></br>\n",
     "> Check [this](https://pages.github.ubc.ca/MDS-2022-23/DSCI_525_web-cloud-comp_students/lectures/lecture4.html#setup-your-jupyterhub) section in lecture notes for more details on setting up jupyterHub."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfb44b01-a298-4770-8636-d6a74e9bc15b",
+   "metadata": {},
+   "source": [
+    "## Screenshot\n",
+    "\n",
+    "![](img/jupyterhub_users.png)"
    ]
   },
   {
@@ -365,6 +395,16 @@
     "Make sure it has 3 objects and see red `public` symbol in your bucket. Refer below screenshot for reference.\n",
     "\n",
     "<img src=\"image/4_result.png\" >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8078c7-17ef-4c60-a02a-551f48a2ef37",
+   "metadata": {},
+   "source": [
+    "## Screenshot\n",
+    "\n",
+    "![](img/s3_setup.png)"
    ]
   },
   {
