--- a/Milestone 3/Milestone3.ipynb
+++ b/Milestone 3/Milestone3.ipynb
@@ -206,10 +206,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f6a45dc",
+   "id": "8997c454-d50e-497a-b9e2-61aac3e3b799",
    "metadata": {},
    "source": [
-    "\n"
+    "## Task 3 notebook:\n",
+    "\n",
+    "https://github.com/UBC-MDS/525-group-2/blob/main/Milestone%203/Milestone3-Task3.ipynb\n",
+    "\n",
+    "## S3 bucket screehshot:\n",
+    "\n",
+    "![](img/model_output_in_s3.png)"
    ]
   },
   {
@@ -235,7 +241,11 @@
    "cell_type": "markdown",
    "id": "6a24925a",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Task 4 notebook:\n",
+    "\n",
+    "https://github.com/UBC-MDS/525-group-2/blob/main/Milestone%203/Milestone3-Task4.ipynb"
+   ]
   }
  ],
  "metadata": {
