Added the journey

--- a/Milestone 4/Milestone4.ipynb
+++ b/Milestone 4/Milestone4.ipynb
@@ -214,6 +214,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "19c62ec0",
+   "metadata": {},
+   "source": [
+    "Milestone 1: was a simple introduction to large dataset manipulation. The interesting part was visualizing how the different hardware configurations impacted the performance of a simple data wrangling process when the data was of significant size. Even though the dataset we used was not the largest available it showed the necessity of using cloud to reduce hardware limitations and scale without the need of an upfront investment.\n",
+    "\n",
+    "Milestone 2: presented the most roadblocks, setting up the environment required some time, and we had trouble with the credentials, we even had to re-do them as the first setup did not work. After the setup process we noticed that the region was incorrect and had to the setup over again. Besides that, one of our members had to practice Linux commands and command line to make sure we all could manipulate and access the EC2 instance.\n",
+    "\n",
+    "Milestone 3: required a little bit of work, we encountered the credential problems again, but we were able to fix them quickly, we also found that we shuffled the data by mistake and had to redo the analysis without shuffling due to the time nature of the dataset.\n",
+    "\n",
+    "Milestone 4: This was quick, we already are very used to the quirks of the AWS lab and EC2 instance that we were able to finish in just 1 hour, the only issue we encountered was accessing the result but it was a simple question and the TA helped us quickly."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0b2fe94a",
    "metadata": {},
